# ScholarQ

./: .gitignore  README.md  main.py  pyproject.toml
backend/: agent.py  llm_service.py  main.py  patent_clients.py  s2_client.py
backend/collector/: __init__.py  epo_collector.py  s2_collector.py  task_manager.py  uspto_collector.py
backend/database/: __init__.py  db.py  models.py
frontend/: app.py
frontend/.streamlit/: config.toml
