[project]
name = "scholarq"
version = "0.1.0"
description = "Semantic Scholar Literature Search and Analysis Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "aiolimiter",
    "pydantic",
    "python-dotenv",
    "streamlit",
    "openai",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langgraph",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
